# csv-quality-gate

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  pyproject.toml
assets/: preview-source.txt  preview-spec.md
examples/: clean.csv  github-action.yml  preflight.sh
src/csv_quality_gate/: __init__.py  cli.py  models.py  profiles.py  report.py  validator.py
tests/: test_cli.py  test_validator.py
tests/fixtures/: clean.csv  duplicates.csv  junk_companies.csv  missing_people.csv
